@@ -19,6 +19,8 @@ package org.apache.cassandra.io.sstable.format;
 
 import java.util.regex.Pattern;
 
+import org.apache.cassandra.utils.ChecksumType;
+
 /**
  * A set of feature flags associated with a SSTable format
  *
@@ -48,7 +50,9 @@ public abstract class Version
 
     public abstract boolean hasNewStatsFile();
 
-    public abstract boolean hasAllAdlerChecksums();
+    public abstract ChecksumType compressedChecksumType();
+
+    public abstract ChecksumType uncompressedChecksumType();
 
     public abstract boolean hasRepairedAt();
 
